--- a/kern/CMakeLists.txt
+++ b/kern/CMakeLists.txt
@@ -25,6 +25,9 @@ add_executable(${PROJECT_NAME}
   EbootSigPatch.c
 )
 
+include_directories(${CMAKE_SOURCE_DIR}/user)
+include_directories(${CMAKE_SOURCE_DIR}/kern)
+
 target_link_libraries(${PROJECT_NAME}
   taihenForKernel_stub
   SceIofilemgrForDriver_stub
